// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar snapshots empty query 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#14141c",
      "borderBottomColor": "#2a2a3a",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "gap": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#14141c",
        "borderColor": "#2a2a3a",
        "borderRadius": 8,
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
  >
    <TextInput
      accessibilityLabel="Search messages"
      autoFocus={true}
      onChangeText={[MockFunction]}
      placeholder="Search messages..."
      placeholderTextColor="#55556a"
      returnKeyType="search"
      style={
        {
          "color": "#e8e8ef",
          "flex": 1,
          "fontSize": 15,
          "paddingVertical": 8,
        }
      }
      value=""
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
      }
    }
  >
    <View
      accessibilityLabel="Previous match"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 0.3,
          "padding": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#e8e8ef",
              "fontSize": 13,
            },
            {
              "color": "#55556a",
            },
          ]
        }
      >
        ▲
      </Text>
    </View>
    <View
      accessibilityLabel="Next match"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 0.3,
          "padding": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#e8e8ef",
              "fontSize": 13,
            },
            {
              "color": "#55556a",
            },
          ]
        }
      >
        ▼
      </Text>
    </View>
    <View
      accessibilityLabel="Close search"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#1e1e2a",
          "borderRadius": 8,
          "opacity": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#8888a0",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Done
      </Text>
    </View>
  </View>
</View>
`;

exports[`SearchBar snapshots with matches 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#14141c",
      "borderBottomColor": "#2a2a3a",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "gap": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#14141c",
        "borderColor": "#2a2a3a",
        "borderRadius": 8,
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
  >
    <TextInput
      accessibilityLabel="Search messages"
      autoFocus={true}
      onChangeText={[MockFunction]}
      placeholder="Search messages..."
      placeholderTextColor="#55556a"
      returnKeyType="search"
      style={
        {
          "color": "#e8e8ef",
          "flex": 1,
          "fontSize": 15,
          "paddingVertical": 8,
        }
      }
      value="hello"
    />
    <View
      accessibilityLabel="Clear search"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#55556a",
            "fontSize": 13,
          }
        }
      >
        ✕
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#8888a0",
          "fontSize": 13,
          "minWidth": 44,
          "textAlign": "center",
        }
      }
    >
      2/3
    </Text>
    <View
      accessibilityLabel="Previous match"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#e8e8ef",
              "fontSize": 13,
            },
            false,
          ]
        }
      >
        ▲
      </Text>
    </View>
    <View
      accessibilityLabel="Next match"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#e8e8ef",
              "fontSize": 13,
            },
            false,
          ]
        }
      >
        ▼
      </Text>
    </View>
    <View
      accessibilityLabel="Close search"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#1e1e2a",
          "borderRadius": 8,
          "opacity": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#8888a0",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Done
      </Text>
    </View>
  </View>
</View>
`;
